--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
+.DS_Store
 node_modules
-package-lock.json
-/.wpt.yml
-/build
-
-/vendor/
+vendor
+assets/css
+assets/js
+languages/woogosend.pot
+dist
