--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "sofyan/woogosend",
-    "description": "WooCommerce per kilometer shipping rates calculator for GoSend Go-Jek Indonesia courier.",
+    "description": "WooCommerce per kilometer shipping rates calculator for GoSend from Gojek Indonesia.",
     "type": "wordpress-plugin",
     "authors": [
         {
@@ -8,7 +8,7 @@
             "email": "sofyansitorus@gmail.com"
         }
     ],
-    "require": {},
+    "minimum-stability": "stable",
     "require-dev": {
         "woocommerce/woocommerce": "dev-master",
         "phpcompatibility/php-compatibility": "*",
@@ -16,7 +16,8 @@
         "wp-coding-standards/wpcs": "^2.1",
         "dealerdirect/phpcodesniffer-composer-installer": "^0.5.0",
         "sirbrillig/phpcs-variable-analysis": "^2.7",
-        "phpunit/phpunit": "^5"
+        "phpunit/phpunit": "^5",
+        "wp-cli/wp-cli": "^2.3"
     },
     "autoload-dev": {
         "classmap": [
@@ -35,5 +36,9 @@
                 "woocommerce/woocommerce-rest-api"
             ]
         }
+    },
+    "scripts": {
+        "phpcs": "vendor/bin/phpcs",
+        "phpcbf": "vendor/bin/phpcbf"
     }
 }
